src/test/ui/never_type/issue-96335.stderr
error: unexpected token: `...`
  --> $DIR/issue-96335.rs:2:6
   |
LL |     0.....{loop{}1};
   |      ^^^
   |
help: use `..` for an exclusive range
   |
LL |     0....{loop{}1};
   |      ~~
help: or `..=` for an inclusive range
   |
LL |     0..=..{loop{}1};
   |      ~~~

error[E0308]: mismatched types
  --> $DIR/issue-96335.rs:2:9
   |
LL |     0.....{loop{}1};
   |         ^^^^^^^^^^^ expected integer, found struct `RangeTo`
   |
   = note: expected type `{integer}`
            found struct `RangeTo<{integer}>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
