src/test/ui/never_type/issue-96335.rs
fn main() {
    0.....{loop{}1};
    //~^ ERROR unexpected token
    //~| ERROR mismatched types
}
